[*] Jump/Crouch raises or lowers the camera in editmode, release to stop.

Demos / Spectating
---------------------

[*] Drop camera to previous followed player position when switching to fly specmode.
[*] Fix broken demo-viewer not able to change to SPECTATOR.
[*] Servers now choose a unique file name for the temporary demo file ("demorecord_<IP/local>_<port>")
[*] Hitsound while spectating

Sounds / Audio
---------------------
[*] Optional heartbeat sound when health reaches a certain level.

Menus
---------------------
[*] New menuitems in the Keyboard menu, for looking up keybinds, and enabling/disabling the old editing binds system.
[*] New menuitems in the gameplay settings menu, for setting fly velocities, and the color that your name is highlighted in, when it appears on the console via chat. (HIGHLIGHT)
[*] New updated kick/ban/reason menu with client statistics. (Reports teamkills as well.)

Bots
---------------------

[*] New scripted "bot survival mode".
[*] Bots in plclips bug fixed.
[*] Bots now actually fire the carbine.
[*] Bots can switch to, and use pistol, knife or grenades.
[*] Bots have different fov, depending on their difficulty.
[*] Bot PF, LSS, Team Survivor & TOSOK modes.

CubeScript
---------------------

[*] addpunct         - Injects CubeScript punctuation. (e.g. echo (addpunct hello) // Output: "hello")
[*] break            - Jumps out of a loop created with the "loop" or "while" command.
[*] continue         - Skip current iteration of a "loop" or "while" command.
[*] delmenu          - Deletes all of the menu items in the specified menu.
[*] akimboautoswitch - Enables or disables automatically switching to akimbo upon pickup. (regardless of current weapon)
[*] add2list         - Appends a new element to a list. (Exactly like add2alias, simply without the additional ";")
[*] isIdent          - Determines if the argument given is a built-in identifier.